common/parser/src/snapshots/parser__tests__simple-2.snap
---
source: common/parser/src/lib.rs
assertion_line: 77
expression: sdl
---
type Mutation {
	"""
	Create a Product
	"""
	unstable_productCreate(input: ProductCreateInput!): ProductCreatePayload
	"""
	Delete a Product by ID
	"""
	unstable_productDelete(id: ID!): ProductDeletePayload
}
type Product {
	id: ID!
	name: String!
	"""
	The product's price in $
	"""
	price: Int!
}
"""
Input to create a new Product
"""
input ProductCreateInput {
	name: String!
	"""
	The product's price in $
	"""
	price: Int!
}
type ProductCreatePayload {
	product: Product
}
type ProductDeletePayload {
	deletedId: ID!
}
type Query {
	"""
	Get a Product by his ID
	"""
	unstable_productbyID(id: ID!): Product
}
schema {
	query: Query
	mutation: Mutation
}

