common/parser/src/snapshots/parser__tests__simple_todo-2.snap
---
source: common/parser/src/lib.rs
assertion_line: 108
expression: sdl
---
type Author {
	name: String!
	lastname: String!
	pseudo: String
	truc: Truc!
}
"""
Author input type.
"""
input AuthorInput {
	name: String!
	lastname: String!
	pseudo: String
	truc: TrucInput!
}
type Mutation {
	"""
	Create a Todo
	"""
	todoCreate(input: TodoCreateInput!): TodoCreatePayload
	"""
	Delete a Todo by ID
	"""
	todoDelete(id: ID!): TodoDeletePayload
}
type Query {
	"""
	Get a Todo by ID
	"""
	todo(id: ID!): Todo
}
type Todo {
	id: ID!
	content: String!
	author: Author
}
"""
Input to create a new Todo
"""
input TodoCreateInput {
	content: String!
	author: AuthorInput
}
type TodoCreatePayload {
	todo: Todo
}
type TodoDeletePayload {
	deletedId: ID!
}
type Truc {
	name: String!
}
"""
Truc input type.
"""
input TrucInput {
	name: String!
}
schema {
	query: Query
	mutation: Mutation
}

