common/parser/src/snapshots/parser__tests__simple_todo_from_template.snap
---
source: common/parser/src/tests.rs
expression: sdl
---
"""
A date-time string at UTC, such as 2007-12-03T10:15:30Z, is compliant with the date-time format outlined in section 5.6 of the RFC 3339
profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.

This scalar is a description of an exact instant on the timeline such as the instant that a user account was created.

# Input Coercion

When expected as an input type, only RFC 3339 compliant date-time strings are accepted. All other input values raise a query error indicating an incorrect type.

# Result Coercion

Where an RFC 3339 compliant date-time string has a time-zone other than UTC, it is shifted to UTC.
For example, the date-time string 2016-01-01T14:10:20+01:00 is shifted to 2016-01-01T13:10:20Z.
"""
scalar DateTime
type Mutation {
	"""
	Create a TodoList
	"""
	todoListCreate(input: TodoListCreateInput!): TodoListCreatePayload
	"""
	Update a TodoList
	"""
	todoListUpdate(by: TodoListByInput!, input: TodoListUpdateInput!): TodoListUpdatePayload
	"""
	Delete a TodoList by ID or unique field
	"""
	todoListDelete(by: TodoListByInput!): TodoListDeletePayload
	"""
	Create a Todo
	"""
	todoCreate(input: TodoCreateInput!): TodoCreatePayload
	"""
	Update a Todo
	"""
	todoUpdate(by: TodoByInput!, input: TodoUpdateInput!): TodoUpdatePayload
	"""
	Delete a Todo by ID or unique field
	"""
	todoDelete(by: TodoByInput!): TodoDeletePayload
}
type PageInfo {
	hasPreviousPage: Boolean!
	hasNextPage: Boolean!
	startCursor: String
	endCursor: String
}
type Query {
	"""
	Query a single TodoList by an ID or a unique field
	"""
	todoList(by: TodoListByInput!): TodoList
	"""
	Paginated query to fetch the whole list of `TodoList`.
	"""
	todoListCollection(after: String, before: String, first: Int, last: Int): TodoListConnection
	"""
	Query a single Todo by an ID or a unique field
	"""
	todo(by: TodoByInput!): Todo
	"""
	Paginated query to fetch the whole list of `Todo`.
	"""
	todoCollection(after: String, before: String, first: Int, last: Int): TodoConnection
}
type Todo {
	title: String!
	complete: Boolean
	"""
	Unique identifier
	"""
	id: ID!
	"""
	when the model was updated
	"""
	updatedAt: DateTime!
	"""
	when the model was created
	"""
	createdAt: DateTime!
}
input TodoByInput {
	id: ID
}
type TodoConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [TodoEdge]
}
"""
Input to create a Todo
"""
input TodoCreateInput {
	title: String!
	complete: Boolean
}
type TodoCreatePayload {
	todo: Todo
}
type TodoDeletePayload {
	deletedId: ID!
}
type TodoEdge {
	node: Todo!
	cursor: String!
}
type TodoList {
	title: String!
	todos(after: String, before: String, first: Int, last: Int): TodoConnection
	"""
	Unique identifier
	"""
	id: ID!
	"""
	when the model was updated
	"""
	updatedAt: DateTime!
	"""
	when the model was created
	"""
	createdAt: DateTime!
}
input TodoListByInput {
	id: ID
}
type TodoListConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [TodoListEdge]
}
"""
Input to create a TodoList
"""
input TodoListCreateInput {
	title: String!
	todos: [TodoToTodoListCreateTodoRelation]
}
type TodoListCreatePayload {
	todoList: TodoList
}
type TodoListDeletePayload {
	deletedId: ID!
}
type TodoListEdge {
	node: TodoList!
	cursor: String!
}
"""
Input to update a TodoList
"""
input TodoListUpdateInput {
	title: String
	todos: [TodoToTodoListUpdateTodoRelation]
}
type TodoListUpdatePayload {
	todoList: TodoList
}
"""
Input to create a Todo for the TodoToTodoList relation of TodoList
"""
input TodoToTodoListCreateTodo {
	title: String!
	complete: Boolean
}
"""
Input to link to or create a Todo for the TodoToTodoList relation of TodoList
"""
input TodoToTodoListCreateTodoRelation {
	create: TodoToTodoListCreateTodo
	link: ID
}
"""
Input to link/unlink to or create a Todo for the TodoToTodoList relation of TodoList
"""
input TodoToTodoListUpdateTodoRelation {
	create: TodoToTodoListCreateTodo
	link: ID
	unlink: ID
}
"""
Input to update a Todo
"""
input TodoUpdateInput {
	title: String
	complete: Boolean
}
type TodoUpdatePayload {
	todo: Todo
}
schema {
	query: Query
	mutation: Mutation
}

