common/parser/src/snapshots/parser__tests__simple_todo_with_enum-2.snap
---
source: common/parser/src/lib.rs
assertion_line: 183
expression: sdl
---
type Author {
	name: String!
	lastname: String!
	pseudo: String
	truc: Truc!
}
"""
Author input type.
"""
input AuthorInput {
	name: String!
	lastname: String!
	pseudo: String
	truc: TrucInput!
}
type Mutation {
	"""
	Create a Todo
	"""
	todoCreate(input: TodoCreateInput!): TodoCreatePayload
	"""
	Delete a Todo by ID
	"""
	todoDelete(id: ID!): TodoDeletePayload
}
type Query {
	"""
	Get a Todo by ID
	"""
	todo(id: ID!): Todo
	"""
	Unpaginated query to fetch the whole list of `Todo`.
	"""
	todoCollection: [Todo]
}
type Todo {
	id: ID!
	content: String!
	authors: [Author]
	ty: TodoType!
}
"""
Input to create a new Todo
"""
input TodoCreateInput {
	content: String!
	authors: [AuthorInput]
	ty: TodoType!
}
type TodoCreatePayload {
	todo: Todo
}
type TodoDeletePayload {
	deletedId: ID!
}
"""
A TodoType
"""
enum TodoType {
	TODO1
	TODO2
}
type Truc {
	name: String!
}
"""
Truc input type.
"""
input TrucInput {
	name: String!
}
schema {
	query: Query
	mutation: Mutation
}

