common/parser/src/snapshots/parser__tests__simple_todo_with_vec-2.snap
---
source: common/parser/src/lib.rs
assertion_line: 167
expression: sdl
---
type Author {
	name: String!
	lastname: String!
	pseudo: String
	truc: Truc!
}
"""
Author input type.
"""
input AuthorInput {
	name: String!
	lastname: String!
	pseudo: String
	truc: TrucInput!
}
type Mutation {
	"""
	Create a Todo
	"""
	todoCreate(input: TodoCreationInput!): TodoCreatePayload
	"""
	Update a Todo
	"""
	todoUpdate(id: ID!, input: TodoUpdateInput!): TodoUpdatePayload
	"""
	Delete a Todo by ID
	"""
	todoDelete(id: ID!): TodoDeletePayload
}
type PageInfo {
	hasPreviousPage: Boolean!
	hasNextPage: Boolean!
	startCursor: String
	endCursor: String
}
type Query {
	"""
	Get a Todo by ID
	"""
	todo(id: ID!): Todo
	"""
	Paginated query to fetch the whole list of `Todo`.
	"""
	todoCollection(after: String, before: String, first: Int, last: Int): TodoConnection
}
type Todo {
	id: ID!
	content: String!
	authors: [Author]
}
type TodoConnection {
	"""
	Information to aid in pagination
	"""
	pageInfo: PageInfo!
	edges: [TodoEdge]
}
type TodoCreatePayload {
	todo: Todo
}
"""
Input to create a new Todo
"""
input TodoCreationInput {
	content: String!
	authors: [AuthorInput]
}
type TodoDeletePayload {
	deletedId: ID!
}
type TodoEdge {
	node: Todo!
	cursor: String!
}
"""
Input to create a new Todo
"""
input TodoUpdateInput {
	content: String
	authors: [AuthorInput]
}
type TodoUpdatePayload {
	todo: Todo
}
type Truc {
	name: String!
}
"""
Truc input type.
"""
input TrucInput {
	name: String!
}
schema {
	query: Query
	mutation: Mutation
}

